# resource-management

./: CMakeLists.txt
cmake-includes/: GTest.cmake  Version.cmake
doc/: CMakeLists.txt  main.tex
doc/content/: ending.tex  environment.tex  examples.tex  extra.tex  introduction.tex  open-cases.tex  problem-desc.tex  reader-profile.tex  resource.tex  title.tex
doc/lib/: misc.tex  title-page.tex
examples/: AsymResource.hpp  CMakeLists.txt  CfgReader-fix.cpp  CfgReader-fix.hpp  CfgReader.cpp  CfgReader.hpp  Logger-fix.cpp  Logger-fix.hpp  Logger.cpp  Logger.hpp  MQClient.hpp  MessageHandler-fix.cpp  MessageHandler-fix.hpp  MessageHandler.cpp  MessageHandler.hpp  Resource.hpp  debug-mutex.hpp
examples/problem/: CMakeLists.txt  CfgReader.cpp  CfgReader.hpp  Logger.cpp  Logger.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageQueue.cpp  MessageQueue.hpp  Subscription.hpp  main.cpp
examples/resource/: CMakeLists.txt  CfgReader.cpp  CfgReader.hpp  Logger.cpp  MessageHandler.cpp  MessageHandler.hpp  MessageQueue.cpp  MessageQueue.hpp  Resource.hpp  main.cpp
tests/: CMakeLists.txt  FailTest.cmake  config.cfg  main-asymetric.cpp  main-extra-debug.cpp  main-fix.cpp  main.cpp  test1-in.txt  test1.cfg  test1.in  test2.in
